public interface IEngine {

    /***
     *
     * @param power set engine power with power amount
     */
    void setEnginePower(double power);

    /***
     *
     * @return enginepower
     */
    double getEnginePower();

}
