
/*** Observer interface for notifying when a vehicle has moved
 *
 */
public interface MoveObserver {
   void actOnCarChange();
}
