
/*** Observer interface for notifying when a vehicle has changed its speed
 *
 */
public interface SpeedObserver {
    void actOnSpeedChange();
}
